--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@react-native-firebase/app": "^16.4.6",
     "@react-native-firebase/messaging": "^16.4.6",
     "@react-navigation/bottom-tabs": "^6.5.0",
-    "@react-navigation/drawer": "^6.5.0",
-    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/drawer": "^6.5.8",
+    "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.0",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
@@ -33,13 +33,13 @@
     "react-native-elements": "^3.4.2",
     "react-native-flash-message": "^0.3.1",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.6.2",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-i18n": "^2.0.15",
     "react-native-modal": "^13.0.1",
     "react-native-modalize": "^2.1.1",
     "react-native-paper": "^4.12.4",
     "react-native-portalize": "^1.0.7",
-    "react-native-reanimated": "^3.0.0-rc.3",
+    "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.3.4",
     "react-native-screens": "^3.17.0",
     "react-native-sqlite-storage": "^6.0.1",
